# AlphaZero

./: .gitignore  AlphaZero_20210225.yml  CMakeLists.txt  best_policy_8_8_5_new.model  best_policy_8_8_5_new_v1.model  best_policy_8_8_5_new_v2.model  best_policy_8_8_5_new_v3.model  board.cpp  board.h  config.py  current_policy_8_8_5_new_v0.model  current_policy_8_8_5_new_v1.model  current_policy_8_8_5_new_v2.model  current_policy_8_8_5_new_v3.model  current_policy_8_8_5_new_v4.model  game  game.cpp  game.h  mcts.cpp  mcts.h  mcts_alphaZero.py  old_5000_epochs_9_9_5.model  readme.md  thread_pool.h  train.py
include/: board.h
models/: model_8x8_5_2000iters_cpu.pt
src/: board.cpp  board.h  game.cpp  game.h  game.py  library.i  mcts.cpp  mcts.h  neural_network.cpp  neural_network.h  neural_network.py  thread_pool.h  train.py
test/: game_test.py  train_test.py
